CHORE: adds test cases for workgroup controller
