# src/api/routes/workgroup/routes.ts
@@ -4,6 +4,7 @@ import { ifTeamSpecifiedDo, rbac, auth, getTeamAndTeamMembershipAndCheckTheyAreA
 import { HttpMethods, HttpStatusCodes } from 'enums';
 import { auditTrail } from 'services/auditTrail';
 import { PatientService } from 'services/patient';
+import { NumberUtils } from 'utils';
 
 interface SearchRequestBody {
   criteria: Filter.SearchItem[];
@@ -47,7 +48,7 @@ const searchWorkgroupHandler: App.EndpointOperation = async (
 };
 
 const createWorkgroupPatientHandler: App.EndpointOperation = async (
-  c: Koa.ParameterizedContext<App.State, App.Context<CorePatient.WorkgroupPatientCreateInput>>,
+  c: Koa.ParameterizedContext<App.State, App.Context>,
   { user, team }: App.AuthenticatedCloudOs
 ) => {
   const input = c.request.body;
@@ -57,13 +58,116 @@ const createWorkgroupPatientHandler: App.EndpointOperation = async (
 };
 
 const getWorkgroupSuggestionsHandler: App.EndpointOperation = async (
-  c: Koa.ParameterizedContext<App.State, App.Context<CorePatient.WorkgroupPatientCreateInput>>,
+  c: Koa.ParameterizedContext<App.State, App.Context>,
   { team }: App.AuthenticatedCloudOs
 ) => {
   const { term }: { term?: string } = c.request.query;
   const workgroups = await WorkgroupService.getWorkgroupSuggestions(String(team._id), term);
   c.status = HttpStatusCodes.OK;
   c.body = workgroups;
+};
+
+const deleteWorkgroupPatientHandler: App.EndpointOperation = async (
+  c: Koa.ParameterizedContext<App.State, App.Context>,
+  { team }: App.AuthenticatedCloudOs
+) => {
+  const workgroupId = c.params?.id;
+  const patientId = c.params?.pId;
+  const workgroup = await WorkgroupService.deleteWorkgroupPatient(`${workgroupId}`, `${patientId}`, String(team._id));
+  c.status = HttpStatusCodes.OK;
+  c.body = workgroup;
+};
+
+const getWorkgroupPatientHandler: App.EndpointOperation = async (
+  c: Koa.ParameterizedContext<App.State, App.Context>,
+  { team }: App.AuthenticatedCloudOs
+) => {
+  const workgroupPatientId = c.params?.pId;
+  const workgroupId = c.params?.id;
+  const workgroupPatient = await WorkgroupService.getWorkgroupPatientById(
+    `${workgroupPatientId}`,
+    `${workgroupId}`,
+    String(team._id)
+  );
+  c.status = HttpStatusCodes.OK;
+  c.body = workgroupPatient;
+};
+
+const saveWorkgroupPatientMarkersHandler: App.EndpointOperation = async (
+  c: Koa.ParameterizedContext<App.State, App.Context<{ markers: string[] }>>,
+  { team }: App.AuthenticatedCloudOs
+) => {
+  const workgroupPatientId = c.params?.pId as string;
+  const workgroupId = c.params?.id as string;
+  const { markers } = c.request.body;
+  const workgroupPatient = await WorkgroupService.saveWorkgroupPatientMarkers(
+    workgroupPatientId,
+    workgroupId,
+    String(team._id),
+    markers
+  );
+  c.status = HttpStatusCodes.OK;
+  c.body = workgroupPatient;
+};
+
+const getWorkgroupPatientsHandler: App.EndpointOperation = async (
+  c: Koa.ParameterizedContext<App.State, App.Context>,
+  { team, user }: App.AuthenticatedCloudOs
+) => {
+  const workgroupId = c.params?.id as string;
+  const workgroupPatients = await WorkgroupService.getWorkgroupPatients(workgroupId, String(team._id), user);
+  c.status = HttpStatusCodes.OK;
+  c.body = workgroupPatients;
+};
+
+const addFieldToWorkgroupPatientHandler: App.EndpointOperation = async (
+  c: Koa.ParameterizedContext<App.State, App.Context<PatientWorkgroup.FieldInput>>,
+  { team }: App.AuthenticatedCloudOs
+) => {
+  const workgroupPatientId = c.params?.pId as string;
+  const workgroupId = c.params?.id as string;
+  const { filterId, instance, array } = c.request.body;
+  const workgroupPatient = await WorkgroupService.addFieldToWorkgroupPatient(
+    workgroupPatientId,
+    workgroupId,
+    { filterId, instance, array },
+    String(team._id)
+  );
+  c.status = HttpStatusCodes.OK;
+  c.body = workgroupPatient;
+};
+
+const removeFieldFromWorkgroupPatientHandler: App.EndpointOperation = async (
+  c: Koa.ParameterizedContext<App.State, App.Context>,
+  { team }: App.AuthenticatedCloudOs
+) => {
+  const workgroupPatientId = c.params?.pId as string;
+  const workgroupId = c.params?.id as string;
+  const fieldId = c.params?.fieldId as string;
+  const fieldIdNum = NumberUtils.castToNumberIfPossible(fieldId);
+  const workgroupPatient = await WorkgroupService.removeFieldFromWorkgroupPatient(
+    workgroupId,
+    workgroupPatientId,
+    fieldIdNum,
+    String(team._id)
+  );
+  c.status = HttpStatusCodes.OK;
+  c.body = workgroupPatient;
+};
+
+const validatePatientInWorkgroupHandler: App.EndpointOperation = async (
+  c: Koa.ParameterizedContext<App.State, App.Context>,
+  { team }: App.AuthenticatedCloudOs
+) => {
+  const { workgroupName }: { workgroupName?: string } = c.request.body;
+  const { patientId }: { patientId?: string } = c.request.body;
+  const response = await WorkgroupService.validatePatientInWorkgroup(
+    `${workgroupName}`,
+    `${patientId}`,
+    String(team._id)
+  );
+  c.status = HttpStatusCodes.OK;
+  c.body = response;
 };
 
 export const workgroupRoutes: App.EndpointsInfo = {
@@ -118,6 +222,83 @@ export const workgroupRoutes: App.EndpointsInfo = {
     middlewares: [
       auth(['token', 'apikey']),
       rbac(RolesRoutes.IndividualBrowserWorkGroupSuggestions),
+      ifTeamSpecifiedDo([getTeamAndTeamMembershipAndCheckTheyAreActive])
+    ],
+    postMiddlewares: [auditTrail]
+  },
+  deleteWorkgroupPatient: {
+    method: HttpMethods.Delete,
+    path: '/individual-browser/workgroup/:id/patient/:pId',
+    operation: deleteWorkgroupPatientHandler,
+    middlewares: [
+      auth(['token', 'apikey']),
+      rbac(RolesRoutes.IndividualBrowserWorkGroupPatient),
+      ifTeamSpecifiedDo([getTeamAndTeamMembershipAndCheckTheyAreActive])
+    ],
+    postMiddlewares: [auditTrail]
+  },
+  getWorkgroupPatient: {
+    method: HttpMethods.Get,
+    path: '/individual-browser/workgroup/:id/patient/:pId',
+    operation: getWorkgroupPatientHandler,
+    middlewares: [
+      auth(['token', 'apikey']),
+      rbac(RolesRoutes.IndividualBrowserPatient),
+      ifTeamSpecifiedDo([getTeamAndTeamMembershipAndCheckTheyAreActive])
+    ],
+    postMiddlewares: [auditTrail]
+  },
+  saveWorkgroupPatientMarkers: {
+    method: HttpMethods.Post,
+    path: '/individual-browser/workgroup/:id/patient/:pId/save-marker',
+    operation: saveWorkgroupPatientMarkersHandler,
+    middlewares: [
+      auth(['token', 'apikey']),
+      rbac(RolesRoutes.IndividualBrowserWorkgroupPatientSaveMarker),
+      ifTeamSpecifiedDo([getTeamAndTeamMembershipAndCheckTheyAreActive])
+    ],
+    postMiddlewares: [auditTrail]
+  },
+  getWorkgroupPatients: {
+    method: HttpMethods.Get,
+    path: '/individual-browser/workgroup/:id/patients',
+    operation: getWorkgroupPatientsHandler,
+    middlewares: [
+      auth(['token', 'apikey']),
+      rbac(RolesRoutes.IndividualBrowserWorkGroupPatients),
+      ifTeamSpecifiedDo([getTeamAndTeamMembershipAndCheckTheyAreActive])
+    ],
+    postMiddlewares: [auditTrail]
+  },
+  addFieldToWorkgroupPatient: {
+    method: HttpMethods.Post,
+    path: '/individual-browser/workgroup/:id/patient/:pId/field',
+    operation: addFieldToWorkgroupPatientHandler,
+    middlewares: [
+      auth(['token', 'apikey']),
+      rbac(RolesRoutes.IndividualBrowserWorkGroupPatientsField),
+      ifTeamSpecifiedDo([getTeamAndTeamMembershipAndCheckTheyAreActive])
+    ],
+    postMiddlewares: [auditTrail]
+  },
+  removeFieldFromWorkgroupPatient: {
+    method: HttpMethods.Delete,
+    path: '/individual-browser/workgroup/:id/patient/:pId/field/:fieldId',
+    operation: removeFieldFromWorkgroupPatientHandler,
+    middlewares: [
+      auth(['token', 'apikey']),
+      rbac(RolesRoutes.IndividualBrowserWorkGroupPatientsField),
+      ifTeamSpecifiedDo([getTeamAndTeamMembershipAndCheckTheyAreActive])
+    ],
+    postMiddlewares: [auditTrail]
+  },
+  validatePatientInWorkgroup: {
+    method: HttpMethods.Post,
+    path: '/individual-browser/workgroup/patient/validate',
+    operation: validatePatientInWorkgroupHandler,
+    middlewares: [
+      auth(['token', 'apikey']),
+      rbac(RolesRoutes.IndividualBrowserWorkGroupPatientValidate),
       ifTeamSpecifiedDo([getTeamAndTeamMembershipAndCheckTheyAreActive])
     ],
     postMiddlewares: [auditTrail]
